@@ -52,6 +52,9 @@ Speed of simulation in seconds per day.
 \fB\    \-\-realtime\fR
 Realtime playback speed.
 .TP
+\fB\-c, \-\-time\-scale SCALE\fR
+Change simulation time scale.
+.TP
 \fB\-i, \-\-file\-idle\-time SECONDS\fR
 Time in seconds files remain idle before they are removed.
 .TP
