@@ -1,5 +1,6 @@
 0.29:
  * Fix handling of avatars for UTF-8 usernames on MACOSX (Christian Köstlin).
+ * Exposed --time-scale option (previously only available interactively).
 
 0.28:
  * Bazaar support for merged commits (Nick Moffit).
